--- a/filter_product.html
+++ b/filter_product.html
@@ -34,7 +34,7 @@
     <div class="row">
 
       <div class="col-lg-3 mb-4">
-        <div class="filter-card">
+        <div class="filter-card position-sticky" style="top: 20px;">
           <h6 class="filter-title">Filters</h6>
 
           <label class="form-label small">Category</label>
